paginacion implementada y optimizacion de codigo